...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_new_search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:onClick="addGroup"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/asbestos"
...
