<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom|center_horizontal"
    android:minHeight="@dimen/nav_header_height"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/nav_user_image_default"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_person_black_24dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/nav_user_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_person_black_24dp"
        android:visibility="gone"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/nav_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/auth_signin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nav_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>