<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_maps_managing"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_maps_managing" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

    <group
        android:id="@+id/nav_group_logout"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_signout_button"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/auth_signout" />
    </group>
</menu>
