...
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <Button
            android:id="@+id/mission_design_button_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="center"
            android:onClick="returnPathToMissionDesign"
            android:text="Done"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/mission_design_button_clear_waypoint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="center"
            android:onClick="clearWaypoints"
...
