...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="false"
    app:layoutDescription="@xml/activity_map_scene">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintLeft_toLeftOf="parent"
...
